@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
- <version>4.0</version>
+ <version>8.5</version>
  <dependencies>
  <dependency>profile-eea.forms:default</dependency>
   <dependency>profile-Products.ATVocabularyManager:default</dependency>
