@@ -3,6 +3,9 @@ Changelog
 
 8.5 - (2018-04-27)
 ------------------
+* Upgrade step: Added upgrade step, plone.app.caching needs to be reimported,
+  it has updated registry settings
+  [petchesi-iulian refs #94520]
 * Change: Modified the pdf view so that the filename request receives the
   correct filename
   [petchesi-iulian refs #94520]
